--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -19,7 +19,7 @@ enable-normalization-opposite-orientation-for-nested-containers = true
 # See: https://nikitabobko.github.io/AeroSpace/guide#layouts
 # The 'accordion-padding' specifies the size of accordion padding
 # You can set 0 to disable the padding feature
-accordion-padding = 45
+accordion-padding = 75
 
 # Possible values: tiles|accordion
 default-root-container-layout = 'tiles'
@@ -66,12 +66,12 @@ on-mode-changed = []
 #                 See:
 #                 https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-    inner.horizontal = 10
-    inner.vertical =   10
-    outer.left =       10
-    outer.bottom =     10
-    outer.top =        0
-    outer.right =      10
+    inner.horizontal = 20
+    inner.vertical =   20
+    outer.left =       20
+    outer.bottom =     20
+    outer.top =        10
+    outer.right =      20
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -106,31 +106,12 @@ on-mode-changed = []
     # end tell'
     # '''
 
-alt-b = '''
-exec-and-forget osascript -e 'if not application "Safari" is running then launch application "Safari"' \
--e 'delay 0.2' \
--e 'tell application "Safari" to make new document' \
--e 'tell application "Safari" to activate' \
--e 'delay 0.1' \
--e 'tell application "System Events" to keystroke "l" using command down'
-'''
+    alt-f = 'fullscreen'
+    alt-t = 'layout floating tiling'
 
-alt-enter = '''
-exec-and-forget osascript -e '
-if application "Ghostty" is running then
-    tell application "Ghostty" to activate
-    delay 0.1
-    tell application "System Events" to keystroke "n" using command down
-else
-    launch application "Ghostty"
-    delay 0.3
-    tell application "Ghostty" to activate
-end if
-'
-'''
-
-
-
+    alt-b = 'exec-and-forget open -a /Applications/Safari.app'
+    alt-enter = 'exec-and-forget open -a /Applications/Ghostty.app'
+    alt-m = 'exec-and-forget open -a /Applications/Spotify.app'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#layout
     alt-slash = 'layout tiles horizontal vertical'
