updates to dotfiles

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,4 +1,4 @@
-theme = Catppuccin Mocha
+theme = Blue Matrix
 background-blur-radius = 20
 mouse-hide-while-typing = true
 background-blur-radius = 20
